<resources>
    <string name="app_name">Belote: score</string>
    <string name="exit">Are you sure that you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exitTitle">Exit</string>
    <string name="new_game">New game</string>
    <string name="sure">Are you sure?</string>
    <string name="count">Score</string>
    <string name="vs22">2 vs 2</string>
    <string name="vs2">For 2</string>
    <string name="vs3">For 3</string>
    <string name="vs4">For 4</string>
    <string name="gamer1">Gamer 1</string>
    <string name="gamer2">Gamer 2</string>
    <string name="gamer3">Gamer 3</string>
    <string name="gamer4">Gamer 4</string>
    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="add">Add score</string>
    <string name="points_for_distribution">Points per distribution:</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="cancel">Cancel</string>
    <string name="game">Game</string>
    <string name="menu">Menu</string>
    <string name="history">History</string>
    <string name="restore">Restore game</string>
    <string name="fonts">Fonts</string>
    <string name="empty_history">History is empty now!</string>
    <string name="bolt">Additional penalties</string>
    <string name="countOfNails">Count of penalties</string>
    <string name="valueOfMinus">Penalty value</string>




    <string name="onboarding_title_welcome">Welcome to the Leanback Sample</string>
    <string name="onboarding_title_design">Designed for Android TV</string>
    <string name="onboarding_title_simple">Simple to include</string>
    <string name="onboarding_title_project">Check out the Sample Project</string>

    <string name="onboarding_description_welcome">This is the Onboarding Fragment, which runs when the user first opens the app</string>
    <string name="onboarding_description_design">The Leanback sample shows how to quickly design apps designed for a 10-foot user interface</string>
    <string name="onboarding_description_simple">You can include the Leanback library through gradle in your own apps</string>
    <string name="onboarding_description_project">Are you looking for guidance? This sample is available on GitHub so you can see how we built this.</string>
    <string name="pref_title_settings">App Settings</string>
    <string name="pref_title_recommendations">Recommendations</string>
    <string name="pref_key_recommendations">pref_recommendations</string>
    <string name="pref_key_screen_general">general_settings</string>
    <string name="pref_title_screen_general">General Settings</string>
    <string name="pref_key_screen_signin">signin</string>
    <string name="pref_title_screen_signin">Please Login</string>
    <string name="pref_title_login_description">Please enter your username and password</string>
    <string name="pref_title_username">Username</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_key_login">pref_login</string>
    <string name="pref_title_login">Login</string>
    <string name="playback_tag">PLAYBACK_TAG</string>
</resources>
