<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.menu.MenuFragment">

    <FrameLayout
        android:id="@+id/lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp">
    </FrameLayout>

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="50sp"
        android:textSize="20sp"
        android:text="@string/theme" />

    <Button
        android:id="@+id/game2x2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="50sp"
        android:textSize="20sp"
        android:text="@string/vs22" />

    <Button
        android:id="@+id/game2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="50sp"
        android:textSize="20sp"
        android:text="@string/vs2" />

    <Button
        android:id="@+id/game3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="50sp"
        android:textSize="20sp"
        android:text="@string/vs3" />

    <Button
        android:id="@+id/game4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="50sp"
        android:textSize="20sp"
        android:text="@string/vs4" />

</LinearLayout>