<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation"
    android:orientation="vertical">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#9BE0E7"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-5807744662830254/7731288859" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_weight="1"
            android:hint="@string/gamer1"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_weight="1"
            android:hint="@string/gamer2"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/name3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_weight="1"
            android:hint="@string/gamer3"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/name4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_weight="1"
            android:hint="@string/gamer4"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/count"
        android:textAlignment="center"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resultField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:text="0"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/resultField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:text="0"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/resultField3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:text="0"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/resultField4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:text="0"
            android:textAlignment="center"
            android:textSize="36sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewRaz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/points_for_distribution"
        android:textAlignment="center"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/numberField1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:hint="0"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/numberField2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:hint="0"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/numberField3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:hint="0"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/numberField4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:hint="0"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/but_calc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:background="#fffacd"
            android:elevation="5sp"
            android:onClick="onCalcClick"
            ads:srcCompat="@drawable/calculator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="24sp"
                android:onClick="onClick"
                android:text="@string/add"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="24sp"
                android:layout_marginRight="20sp"
                android:onClick="onNewClick"
                android:text="@string/new_game"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>