<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        android:backgroundTint="#9BE0E7"
        ads:adUnitId="ca-app-pub-5807744662830254/7731288859" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:id="@+id/text_box1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="2sp"
            android:layout_weight="1"
            app:hasClearButton="true"
            app:labelText="@string/team1">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center" />
        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:id="@+id/text_box2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="5sp"
            android:layout_weight="1"
            app:hasClearButton="true"
            app:labelText="@string/team2">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/count"
        android:textAlignment="center"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resultField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:text="0"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/resultField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:text="0"
            android:textAlignment="center"
            android:textSize="36sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewRaz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/points_for_distribution"
        android:textAlignment="center"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/numberField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:focusable="auto"
            android:hint="0"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textSize="36sp"
            android:visibility="visible"
            android:layout_weight="1"/>

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/number_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:np_dividerColor="?colorAccent"
            app:np_selectedTextColor="?colorAccent"
            app:np_textColor="?colorAccent"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/numberField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:focusable="auto"
            android:hint="0"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textSize="36sp"
            android:visibility="visible"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="20sp"
            android:text="@string/new_game"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>